package sokoban.model.cell;

public class Box extends GameObject {

    public Box() {
        super();
    }
}
