package sokoban.model.cell;


public class Target extends GameObject {
    public Target() {
        super();
    }
}
