@startuml

skinparam classAttributeIconSize 0
skinparam defaultFontName Consolas
!pragma useIntermediatePackages false

class Game {
    -board4Design: Board
}

class Board {
    -grid: Grid
}

class Grid {
    -cell4Design: Cell
}

class Cell {
    -elementStack: ElementStack
    *player: Player
    *playerPos: Pair<int>
}

abstract class GameObject {
}

class ElementStack {
    -content: HashMap<int, GameObject>
}

class Wall {
}

class Box {
}

class Player {
}

class Target {
}

class Ground {
}

Game *-left-> "1" Board
Board *-left-> "1" Grid
Grid *-down-> "1" Cell

ElementStack *-left-> "0..1" Cell
Cell *--> "1" Player


ElementStack *-down-> "1..3" GameObject
GameObject <|-right- Box
GameObject <|-down- Target
GameObject <|-down- Player
GameObject <|-down- Ground

GameObject <|-left- Wall


@enduml